--- a/src/app/bordereau/bordereau.component.html
+++ b/src/app/bordereau/bordereau.component.html
@@ -1,7 +1,7 @@
 <p>Bordereau du cours : {{coursCourant().sigle}} {{coursCourant().titre}}</p>
 @for (etudiant of coursCourant().listeEtudiant; track $index){
   <div>
-    {{$index}} {{coursCourant().listeEtudiant?.at($index).nom}}
+    {{$index}} {{etudiant.nom}} {{etudiant.prenom}}
   </div>
 
 }
